@@ -2,6 +2,7 @@ package codesquad.fineants.domain.kis.service;
 
 import java.time.Duration;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -23,11 +24,15 @@ import codesquad.fineants.domain.kis.client.KisClient;
 import codesquad.fineants.domain.kis.client.KisCurrentPrice;
 import codesquad.fineants.domain.kis.domain.dto.response.KisClosingPrice;
 import codesquad.fineants.domain.kis.domain.dto.response.KisDividend;
+import codesquad.fineants.domain.kis.domain.dto.response.KisDividendWrapper;
+import codesquad.fineants.domain.kis.domain.dto.response.KisIpo;
+import codesquad.fineants.domain.kis.domain.dto.response.KisSearchStockInfo;
 import codesquad.fineants.domain.kis.repository.ClosingPriceRepository;
 import codesquad.fineants.domain.kis.repository.CurrentPriceRepository;
 import codesquad.fineants.domain.kis.repository.HolidayRepository;
 import codesquad.fineants.domain.kis.repository.KisAccessTokenRepository;
 import codesquad.fineants.domain.notification.event.publisher.PortfolioPublisher;
+import codesquad.fineants.domain.stock.domain.dto.response.StockDataResponse;
 import codesquad.fineants.domain.stock.domain.entity.Stock;
 import codesquad.fineants.domain.stock_target_price.domain.entity.StockTargetPrice;
 import codesquad.fineants.domain.stock_target_price.event.publisher.StockTargetPricePublisher;
@@ -35,14 +40,17 @@ import codesquad.fineants.domain.stock_target_price.repository.StockTargetPriceR
 import codesquad.fineants.global.errors.exception.KisException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.util.retry.Retry;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class KisService {
 	private static final ScheduledExecutorService executorService = Executors.newSingleThreadScheduledExecutor();
-	public static final Duration TIMEOUT = Duration.ofMinutes(1L);
+	public static final Duration DELAY = Duration.ofMillis(50L);
+	public static final Duration TIMEOUT = Duration.ofMinutes(10L);
 
 	private final KisClient kisClient;
 	private final PortfolioHoldingRepository portFolioHoldingRepository;
@@ -96,7 +104,7 @@ public class KisService {
 				}
 			})
 			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+			.toList();
 
 		prices.forEach(currentPriceRepository::addCurrentPrice);
 
@@ -175,7 +183,7 @@ public class KisService {
 				}
 			})
 			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	private CompletableFuture<KisClosingPrice> createClosingPriceFuture(
@@ -197,13 +205,62 @@ public class KisService {
 		return kisClient.fetchClosingPrice(tickerSymbol, manager.createAuthorization());
 	}
 
-	public String fetchDividend(String tickerSymbol) {
-		return kisClient.fetchDividend(tickerSymbol, manager.createAuthorization());
+	/**
+	 * tickerSymbol에 해당하는 종목의 배당 일정을 조회합니다.
+	 * @param tickerSymbol 종목 단축 코드
+	 * @return 종목의 배당 일정 정보
+	 */
+	public Mono<List<KisDividend>> fetchDividend(String tickerSymbol) {
+		return kisClient.fetchDividendThisYear(tickerSymbol, manager.createAuthorization())
+			.map(KisDividendWrapper::getKisDividends)
+			.doOnSuccess(response -> log.debug("fetchDividend list is {}", response.size()))
+			.retryWhen(Retry.fixedDelay(Long.MAX_VALUE, Duration.ofSeconds(5)))
+			.onErrorResume(e -> Mono.empty());
 	}
 
 	public List<KisDividend> fetchDividendAll(LocalDate from, LocalDate to) {
 		return kisClient.fetchDividendAll(from, to, manager.createAuthorization()).stream()
 			.sorted()
-			.collect(Collectors.toList());
+			.toList();
+	}
+
+	/**
+	 * 종목 기본 조회
+	 * @param tickerSymbol 종목 티커 심볼
+	 * @return 종목 정보
+	 */
+	public Mono<KisSearchStockInfo> fetchSearchStockInfo(String tickerSymbol) {
+		return kisClient.fetchSearchStockInfo(tickerSymbol, manager.createAuthorization())
+			.doOnSuccess(response -> log.debug("fetchSearchStockInfo ticker is {}", response.getTickerSymbol()))
+			.retryWhen(Retry.fixedDelay(Long.MAX_VALUE, Duration.ofSeconds(5)))
+			.onErrorResume(e -> Mono.empty());
+	}
+
+	/**
+	 * 상장된 종목 조회
+	 * 하루전부터 오늘까지의 상장된 종목들의 정보를 조회한다.
+	 * @return 종목 정보 리스트
+	 */
+	public Set<StockDataResponse.StockIntegrationInfo> fetchStockInfoInRangedIpo() {
+		LocalDate today = LocalDate.now();
+		LocalDate yesterday = today.minusDays(1);
+		Set<String> tickerSymbols = kisClient.fetchIpo(yesterday, today, manager.createAuthorization())
+			.blockOptional(TIMEOUT)
+			.orElseThrow()
+			.getKisIpos().stream()
+			.filter(kisIpo -> !kisIpo.isEmpty())
+			.map(KisIpo::getShtCd)
+			.collect(Collectors.toSet());
+
+		int concurrency = 20;
+		return Flux.fromIterable(tickerSymbols)
+			.flatMap(this::fetchSearchStockInfo, concurrency)
+			.delayElements(DELAY)
+			.collectList()
+			.blockOptional(TIMEOUT)
+			.orElseGet(Collections::emptyList).stream()
+			.map(KisSearchStockInfo::toEntity)
+			.map(StockDataResponse.StockIntegrationInfo::from)
+			.collect(Collectors.toUnmodifiableSet());
 	}
 }
